fix books pagination
